tests/src/negative/type.py
if "kek":
    1 == 1
